Dashboard/deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudwatch
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cloudwatch-dashboard
  name: cloudwatch-dashboard
  namespace: cloudwatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudwatch-dashboard
  template:
    metadata:
      labels:
        app: cloudwatch-dashboard
    spec:
      containers:
      - env:
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: POD_SERVICEACCOUNT
          valueFrom:
            fieldRef:
              fieldPath: spec.serviceAccountName
        image: ghcr.io/william86370/cloudwatch-dashboard:latest
        imagePullPolicy: Always
        name: cloudwatch-dashboard
        ports:
        - containerPort: 28015
          name: http
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: cloudwatch-privileged
      serviceAccountName: cloudwatch-privileged
