Dashboard/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudwatch-dashboard-service
  namespace: cloudwatch
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 28015
  selector:
    app: cloudwatch-dashboard
  type: ClusterIP
